# ms_copilot_automation

./: .autoenv  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  DEVELOPER_GUIDE.md  IMPROVEMENTS.md  LICENSE  Makefile  PROJECT_SPECIFICATION.md  README.md  VENV_SETUP.md  activate_venv.sh  pyproject.toml  pytest.ini  requirements.txt  setup_auto_activate.sh
.github/workflows/: test.yml
docs/: api.md  cli.md  contributing.md  getting-started.md  index.md  troubleshooting.md
input/: document.txt  haiku.txt
src/: __init__.py  exceptions.py
src/auth/: m365_auth.py
src/automation/: chat.py  constants.py  copilot_controller.py  files.py  ui.py
src/cli/: main.py
src/utils/: chunking.py  config.py  logger.py  retry.py
tests/: test_chat.py  test_cli_commands.py  test_copilot_controller.py  test_copilot_e2e.py  test_files.py  test_smoke.py
