[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ms-copilot-automation"
version = "0.1.0"
description = "Automation toolkit for Microsoft Copilot built with Playwright"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
    "keyring>=24.0.0",
    "pyotp>=2.8.0",
    "rich>=13.7.0",
]

[project.scripts]
ms-copilot = "src.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]
